--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -1872,8 +1872,8 @@
    "id": "bc12a3f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T19:53:47.471859Z",
-     "start_time": "2023-02-07T19:53:39.207956Z"
+     "end_time": "2023-02-08T21:38:12.689477Z",
+     "start_time": "2023-02-08T21:38:05.209175Z"
     }
    },
    "outputs": [],
@@ -1900,8 +1900,8 @@
    "id": "f262df4d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T19:53:47.518479Z",
-     "start_time": "2023-02-07T19:53:47.475094Z"
+     "end_time": "2023-02-08T21:38:12.744570Z",
+     "start_time": "2023-02-08T21:38:12.695042Z"
     }
    },
    "outputs": [
@@ -2118,8 +2118,8 @@
    "id": "7b1dd562",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T19:53:48.192258Z",
-     "start_time": "2023-02-07T19:53:47.521877Z"
+     "end_time": "2023-02-08T21:38:12.753586Z",
+     "start_time": "2023-02-08T21:38:12.747995Z"
     }
    },
    "outputs": [],
@@ -2136,48 +2136,17 @@
     "\n",
     "# Adresse du modèle\n",
     "#model_uri = 'http://127.0.0.1:80/' # local\n",
-    "model_uri = 'http://35.180.69.239:80/' # cloud\n",
-    "\n",
-    "data_json = {'data': X.loc[client_id].to_list(),\n",
-    "             'features_name': list(X.columns)}\n",
-    "\n",
-    "response_json = request_prediction(model_uri, data_json)"
+    "model_uri = 'http://35.180.69.239:80/' # cloud"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9bddff3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-07T19:53:48.198079Z",
-     "start_time": "2023-02-07T19:53:48.194559Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['X_imputed', 'global_imp_features', 'global_imp_values', 'local_imp_features', 'local_imp_values', 'prediction'])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response_json.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
    "id": "a1612c0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-08T08:43:11.648306Z",
-     "start_time": "2023-02-08T08:43:11.340870Z"
+     "end_time": "2023-02-08T21:38:13.575980Z",
+     "start_time": "2023-02-08T21:38:12.766677Z"
     },
     "scrolled": false
    },
@@ -2197,6 +2166,7 @@
     "import dash_daq as daq\n",
     "import matplotlib as mpl\n",
     "import plotly.graph_objects as go\n",
+    "import plotly.express as px\n",
     "\n",
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
     "fontsize = '24px'\n",
@@ -2558,32 +2528,6 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "6a57861e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-08T07:51:59.277722Z",
-     "start_time": "2023-02-08T07:51:59.273356Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['X_imputed', 'global_imp_features', 'global_imp_values', 'local_imp_features', 'local_imp_values', 'prediction'])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response_json.keys()"
    ]
   },
   {
@@ -3902,7 +3846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
